change structure received
